refactor(api): remove verbs from all remaining REST-points
1. /login -> /sessions (POST)
2. /logout -> /sessions (DELETE)
3. /register -> /users (POST)
4. /ladder/join -> /ladder/participants (POST)
